[package]
name = "internet-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.0"
druid = "0.8.3"
html5ever = "0.26.0"
petgraph = "0.6.4"
reqwest = "0.11.22"
serde_json = "1.0.114"
tokio = { version = "1.34.0", features = ["full"] }
